data/all_generated_tests/raw_wast_tests/unreachable_ImproperFunctionCallorReturnHandling_1445.wast
;; 6. **Test Description:**     Place an `unreachable` instruction in a function that is conditionally executed via an `if` clause followed by a `return`. Validate if the trap precludes the condition and any returning action.    **Constraint Checked:** Conditional trapping and prevention of return.    **Relation to Improper Call/Return Handling:** Ensures conditional paths involving `unreachable` correctly trap without further execution or returning.

(assert_invalid
  (module (func $conditional_unreachable_return
    (block
      (if (i32.const 0)
        (then
          (unreachable)
        )
      )
      (return)
    )
  ))
  "type mismatch"
)